--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,9 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+			<!-- <version>1.4.196</version> -->
+			<!-- <version>1.4.191</version> -->
+			<version>1.4.199</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
