--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
 			<version>1.4.199</version>
 			<scope>runtime</scope>
 		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.fasterxml.jackson.core</groupId> -->
+<!-- 			<artifactId>jackson-core</artifactId> -->
+<!-- 			<version>2.12.3</version> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
